--- a/public/index.html
+++ b/public/index.html
@@ -20,18 +20,6 @@
         {id: 2, author: "Jordan Walke", text: "This is *another* comment"}
       ];
 
-      var CommentBox = React.createClass({
-        render: function () {
-          return (
-            <div className="commentBox">
-              <h1>Comments</h1>
-              <CommentList data={this.props.data}/>
-              <CommentForm />
-            </div>
-          )
-        }
-      });
-
       var Comment = React.createClass({
 
         rawMarkup: function() {
@@ -40,25 +28,24 @@
           return { __html: rawMarkup };
         },
 
-
-        render:function () {
-          var md = new Remarkable();
+        render: function () {
           return (
             <div className="comment">
               <h2 className="commentAuthor">
                 {this.props.author}
               </h2>
-              <span dangerouslySetInnerHTML={this.rawMarkup()} />
+              <span dangerouslySetInnerHTML={this.rawMarkup()}/>
             </div>
           )
         }
-      });
+      })
 
       var CommentList = React.createClass({
-        render: function () {
+        render: function() {
+
           var commentNodes = this.props.data.map(function (comment) {
-            return(
-              <Comment author={comment.author} key={comment.id} >
+            return (
+              <Comment author={comment.author} key={comment.id}>
                 {comment.text}
               </Comment>
             );
@@ -68,26 +55,123 @@
             <div className="commentList">
               {commentNodes}
             </div>
-          )
+          );
         }
       });
 
       var CommentForm = React.createClass({
+
+        getInitialState: function () {
+          return {author: '', text: ''};
+        },
+
+        handleAuthorChange: function (e) {
+          this.setState({author: e.target.value});
+        },
+
+        handleTextChange: function (e) {
+          this.setState({text: e.target.value});
+        },
+
+        handleSubmit: function(e) {
+          //prevent the browser's default action of submitting form
+          e.preventDefault();
+          var author = this.state.author.trim();
+          var text = this.state.text.trim();
+          if (!text || !author) {
+            return;
+          }
+
+          this.props.onCommentSubmit({author: author, text:text});
+          this.setState({author:'', text:''});
+        },
+
         render: function () {
           return (
-            <div className="commentForm">
-              Hello world, I'm a CommentForm.
-            </div>
+            <form className="commentForm" onSubmit={this.handleSubmit}>
+              <input type="text"
+                     placeholder="Your name"
+                     value={this.state.author}
+                     onChange={this.handleAuthorChange}
+              />
+              <input type="text"
+                     placeholder="Say something..."
+                     value={this.state.text}
+                     onChange={this.handleTextChange}
+              />
+              <input type="submit" value="Post" />
+            </form>
           )
         }
       });
 
+      //Custom React class names begin with an uppercase letter
+      var CommentBox = React.createClass({
+
+        //executes exactly once during the lifecycle of the component and sets up the initial state of the component.
+        getInitialState: function () {
+          return { data: []};
+        },
+
+        //retrieve data from api using ajax
+        loadCommentsFromServer: function () {
+          $.ajax({
+            url: this.props.url,
+            dataType:'json',
+            cache: false,
+            success: function (data) {
+              this.setState({ data : data});
+            }.bind(this),
+            error: function (xhr, status, err) {
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+
+        //submit to the server and refresh the list
+        handleCommentSubmit: function(comment) {
+
+          var comments = this.state.data;
+          comment.id = Date.now();
+          var newComments = comments.concat([comment]);
+          this.setState({data:newComments});
+
+          $.ajax({
+            url: this.props.url,
+            dataType:'json',
+            type:'POST',
+            data:comment,
+            success: function (data) {
+              this.setState({data:data});
+            }.bind(this),
+            error: function (xhr, status, err) {
+              this.setState({data:comments});
+              console.error(this.props.url, status, err.toString());
+            }.bind(this)
+          });
+        },
+
+        //called automatically by React after a component is rendered for the first time.
+        componentDidMount: function () {
+          this.loadCommentsFromServer();
+          setInterval(this.loadCommentsFromServer, this.props.pollInterval);
+        },
+
+        render: function () {
+          return(
+            <div className="commentBox">
+              <h1>Comments</h1>
+              <CommentList data={this.state.data}/>
+              <CommentForm onCommentSubmit={this.handleCommentSubmit}/>
+            </div>
+          );
+        }
+      })
+
       ReactDOM.render(
-        <CommentBox data={data}/>,
+        <CommentBox url="/api/comments" pollInterval={2000} />,
         document.getElementById('content')
       )
-
-
     </script>
   </body>
 </html>
